Added CSS files to each component

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 node_modules/.cache/.eslintcache
 node_modules/.cache/babel-loader/25bf0e7e557d18e6bfd307a8da7c5f67.json
 node_modules/.cache/.eslintcache
+node_modules/.cache/default-development/4.pack
