Added footer with open-source code

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,26 @@ node_modules/.cache/.eslintcache
 node_modules/.cache/babel-loader/25bf0e7e557d18e6bfd307a8da7c5f67.json
 node_modules/.cache/.eslintcache
 node_modules/.cache/default-development/4.pack
+node_modules/.cache/.eslintcache
+node_modules/.cache/.eslintcache
+node_modules/.cache/default-development/index.pack.old
+node_modules/.cache/default-development/index.pack
+node_modules/.cache/default-development/8.pack
+node_modules/.cache/default-development/7.pack
+node_modules/.cache/default-development/6.pack
+*.old
+node_modules/.cache/default-development/index.pack
+node_modules/.cache/default-development/8.pack
+node_modules/.cache/default-development/7.pack
+node_modules/.cache/default-development/6.pack
+node_modules/.cache/default-development/1.pack
+node_modules/.cache/default-development/0.pack
+node_modules/.cache/babel-loader/b1ceb4647e9feca794793d835e937b2a.json
+node_modules/.cache/.eslintcache
+node_modules/.cache/babel-loader/0d887683bf991001ffa4dc9089b4cdf7.json
+node_modules/.cache/babel-loader/42607657aed9da670d6dd83e9cc41e79.json
+node_modules/.cache/babel-loader/5c001c58bc5c0d37630631ad8b29b4fa.json
+node_modules/.cache/babel-loader/966bc071e03b6e224111c1371d25d316.json
+node_modules/.cache/babel-loader/98aac1dc472f2eb99df7d231f485b1c1.json
+node_modules/.cache/babel-loader/5d7b801a864cf045a751c2db9485bb46.json
+node_modules/.cache/babel-loader/3848ac86df37e426f6bfa299ca9d2833.json
